# Cmake-Test

./: .gitignore  CMakeLists.txt  README.md  hello.cpp
src/: hello.cpp
